make project jar compatible & move temp files into temp folder