@@ -68,6 +68,14 @@
   </dependencies>
 
   <build>
+  <resources>
+      <resource>
+        <directory>src/main/resources</directory>
+        <includes>
+          <include>**/*</include>
+        </includes>
+      </resource>
+    </resources>
   <plugins>
 
     <plugin>
@@ -128,7 +136,11 @@
       <configuration>
         <transformers>
           <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-            <mainClass>com.hhu.Main</mainClass>
+              <mainClass>Main</mainClass>
+              <manifestEntries>
+                <Add-Opens>java.base/java.lang java.base/java.util java.base/java.util.concurrent.atomic</Add-Opens>
+                <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
+              </manifestEntries>
           </transformer>
         </transformers>
       </configuration>
